tests/baselines/reference/restParameterNotLast.errors.txt
==== tests/cases/compiler/restParameterNotLast.ts (1 errors) ====
    function f(...x, y) { }
               ~~~~
!!! error TS1014: Rest parameter must be last in list.